--- a/java.css
+++ b/java.css
@@ -111,8 +111,11 @@ button:hover{
 
     }
     .story-container{
-        margin-left:30px;
+        margin-left:10px;
         width:400px;
+        height:300px;
     }
+    button{
+        margin-left:60px;
 }  
 
